# yura-chess

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devkit/: toolkit.json
.github/workflows/: ci.yml  publish.yml
deploy/: INFRASTRUCTURE.md  README.md  compose.production.yml  compose.staging.yml  deploy.sh  rollback.sh
deploy/mariadb/: backup.sh  restore-smoke.sh
deploy/nginx/: chess.waxim.ru.conf
deploy/systemd/: yura-chess-backup.service  yura-chess-backup.timer  yura-chess-restore-smoke.service  yura-chess-restore-smoke.timer
docs/: yandex-skill-description.md
docs/product/: human-like-experience-roadmap.md  puzzles-roadmap.md
docs/qa/: 20260719-human-like-experience-e2e.md  20260719-ultratest-report.md  20260719-whole-app-test-plan.md
migrations/: env.py
migrations/versions/: 0001_games_and_requests.py  0002_asr_transcripts.py  0003_board_image_cache.py  0004_retention_indexes.py  0005_game_activity.py  0006_alice_response_replay.py  0007_player_preferences.py  0008_training_mode.py  0009_analysis_checkpoints.py  0010_game_reviews.py  0011_puzzles.py  0012_case_sensitive_puzzle_ids.py  0013_query_order_and_timestamps.py  0014_usage_analytics.py  0015_reclassify_ping_monitors.py
scripts/: import_lichess_openings.py  import_lichess_puzzles.py
src/yura_chess/: __init__.py  cli.py  main.py  settings.py
tests/: conftest.py  database_fixtures.py  settings_fixtures.py  test_cli.py  test_health.py  test_opening_import.py  test_puzzle_import.py
tests/adapters/: conftest.py  (+1 more)
(+89 files in other folders)
