[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "yura-chess"
version = "0.1.0"
description = "Voice-first chess skill for Yandex Alice"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Blaryx" }]
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "fastapi>=0.139.2,<0.140.0",
  "pillow>=12.3.0,<13.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "pymysql>=1.1.0,<2.0.0",
  "python-chess>=1.999,<2.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "httpx2>=2.7.0,<3.0.0",
  "mypy>=1.17.0,<2.0.0",
  "pytest>=9.1.1,<10.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[project.scripts]
yura-chess-shell = "yura_chess.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yura_chess = ["data/*.tsv", "data/*.json", "data/*.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["deployed: talks to the public deployed webhook over HTTP and uses no local database"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
